Update xenta-psdthumbnailer (1.3.1)

--- a/debian/control
+++ b/debian/control
@@ -3,13 +3,12 @@ Section: gnome
 Priority: optional
 Maintainer: Dindin Hernawan (Xenta OS) <root@dev.xentaos.org>
 Build-Depends: debhelper (>=9)
-Standards-Version: 3.9.6
+Standards-Version: 3.9.7
 Homepage: http://github.com/xenta-psdthumbnailer
-#Vcs-Git: git://anonscm.debian.org/collab-maint/xenta-psdthumbnailer.git
-#Vcs-Browser: https://anonscm.debian.org/cgit/collab-maint/xenta-psdthumbnailer.git
+Vcs-Browser: http://github.com/xenta-psdthumbnailer.git
 
 Package: xenta-psdthumbnailer
 Architecture: all
 Depends: imagemagick
-Description: Psd File Thumbnailer
- Psd File Thumbnailer for Nemo File Manager
+Description: Penampil Berkas *.PSD di Nemo File Manager.
+ Penampil Berkas *.PSD di Nemo File Manager untuk Xenta OS.
