Update xenta-psdthumbnailer (1.3.2)

--- a/debian/control
+++ b/debian/control
@@ -1,11 +1,11 @@
 Source: xenta-psdthumbnailer
 Section: gnome
 Priority: optional
-Maintainer: Dindin Hernawan (Xenta OS) <root@dev.xentaos.org>
+Maintainer: Dindin Hernawan (Xenta OS) <dindin_hernawan@yahoo.com>
 Build-Depends: debhelper (>=9)
 Standards-Version: 3.9.7
-Homepage: http://github.com/xenta-psdthumbnailer
-Vcs-Browser: http://github.com/xenta-psdthumbnailer.git
+Homepage: http://github.com/xentaoslinux/xenta-psdthumbnailer
+Vcs-Browser: http://github.com/xentaoslinux/xenta-psdthumbnailer.git
 
 Package: xenta-psdthumbnailer
 Architecture: all
